# CSE-230-Final-project-Breakout-Clone

./: README.md
CSE 230 Project/: game.cabal  game.yaml  gamer.cabal  test.cabal
CSE 230 Project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
CSE 230 Project/src/: Game.hs  Handler.hs  Main.hs  Setting.hs  Test.hs  UI.hs  Utils.hs  game.hs  setting.hs
CSE 230 Project/test/: Test.hs
project/: test.cabal
project/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
project/src/: Game.hs  Main.hs  Setting.hs
