cabal-version:       >=1.10
name: gamer
version:             0.1.0.0


custom-setup
  setup-depends: base, Cabal

executable testGame
  hs-source-dirs:      src
  other-modules:       UI
                     , Game
                     , Handler
                     , Utils
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , vty-unix

 ghc-options: -threaded -rtsopts -with-rtsopts=-N

library 
 exposed-modules: 
   Game
   Utils
   UI
   Handler
 hs-source-dirs:
   src
 default-language:    Haskell2010
 build-depends:       base >= 4.7 && < 5
                      , brick
                      , containers
                      , linear
                      , lens
                      , random
                      , transformers
                      , vty
                      , vty-unix
 

test-suite test


  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , vty-unix
                     , HUnit
                     , gamer

  default-language:    Haskell2010
