name: test
version:             0.1.0.0
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal

executable test
  hs-source-dirs:      src
  other-modules:       Setting
                     , Game
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , vty-unix

 ghc-options: -threaded -rtsopts -with-rtsopts=-N