name: test
version:             0.1.0.0
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal

executable testGame
  hs-source-dirs:      src
  other-modules:       UI
                     , Game
                     , Handler
                     , Utils
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , vty-unix

 ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite test

  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Test.hs
  other-modules:       Setting
                     , Game
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , vty-unix
                     , HUnit

  default-language:    Haskell2010
